# memory-engine

./: .gitignore  .mcp.json  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  OLLAMA_PROVIDER_IMPLEMENTATION.md  README.md  SECURITY.md  conftest.py  memory_engine_cli.py  pyproject.toml  pytest.ini  requirements.txt  setup.py
.claude/: CLAUDE.md
.claude.example/: README.md  settings.json
.claude.example/commands/: commit  docker  setup  test
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
config/: README.md  config.yaml  grafana_dashboard.json
config/environments/: config.development.yaml  config.production.yaml  config.staging.yaml  config.testing.yaml
docker/: docker-compose.yml
docs/: README.md  setup_guide.md
docs/api/: README.md  api_reference.md
docs/developer/: README.md  architecture.md  configuration_system.md  setup_guide.md  storage_backends.md
docs/security/: README.md
docs/user/: README.md  anthropic_llm_provider.md  configuration.md  ollama_embedding_provider.md  troubleshooting.md
examples/: README.md  advanced_query_example.py  anthropic_llm_example.py  basic_usage.py  chroma_vector_store_example.py  config_example.py  enhanced_mcp_example.py  event_system_example.py  knowledge_extraction.py  llm_manager_example.py  mcp_client_example.py  ollama_embedding_example.py  ollama_llm_example.py  openai_llm_example.py  orchestrator_integration_example.py  security_example.py  storage_backends_example.py  synthesis_example.py
memory_core/agents/: __init__.py  knowledge_agent.py
memory_core/config/: __init__.py  config_manager.py
memory_core/core/: knowledge_engine.py
memory_core/db/: __init__.py  graph_storage_adapter.py  janusgraph_storage.py  versioned_graph_adapter.py
memory_core/embeddings/: embedding_manager.py  modular_embedding_manager.py  vector_store.py
memory_core/health/: __init__.py  health_checker.py  health_endpoints.py  service_monitor.py
memory_core/ingestion/: advanced_extractor.py  bulk_processor.py  merging.py  relationship_extractor.py
memory_core/llm/: __init__.py  factory.py  manager.py
memory_core/mcp_integration/: __init__.py  enhanced_mcp_endpoint.py  mcp_endpoint.py
memory_core/migration/: __init__.py  backend_migrator.py  backup_manager.py  data_exporter.py  data_importer.py
memory_core/model/: knowledge_node.py  relationship.py
memory_core/monitoring/: __init__.py  alert_config.py  distributed_tracing.py  health_checks.py  metrics_collector.py  performance_monitor.py  structured_logger.py
memory_core/orchestrator/: __init__.py  data_formats.py  enhanced_mcp.py  event_system.py  module_registry.py  query_language.py
memory_core/performance/: __init__.py  batch_optimizer.py  cache_manager.py  connection_pool.py  memory_manager.py  metrics_collector.py  prepared_statements.py
memory_core/plugins/: __init__.py  embedding_plugin.py  llm_plugin.py  (+3 more)
scripts/: README.md  setup.sh  test.sh
tests/: README.md  __init__.py  conftest.py  test_advanced_extractor.py  test_advanced_query_engine.py  test_embedding_manager.py  test_enhanced_mcp_endpoint.py  test_graph_storage_adapter.py  test_janusgraph_storage.py  test_knowledge_agent.py  test_knowledge_engine.py  test_knowledge_node.py  test_knowledge_synthesis_engine.py  test_mcp_endpoint.py  test_merging.py  test_milvus_connection.py  test_monitoring_basic.py  test_monitoring_system.py  test_performance_optimizations.py  test_quality_based_query_ranking.py  test_quality_enhancement_system.py  test_relationship_extractor.py  test_revision_manager.py  test_security_auth.py  test_security_encryption.py  test_security_rbac.py  test_storage_backends.py  test_vector_store.py  test_versioned_graph_adapter.py
(+103 files in other folders)
